# solana-indexer

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs
crates/cli/src/handlers/: parse.rs
crates/cli/templates/: accounts_mod.askama  accounts_struct.askama  events_struct.askama  instructions_mod.askama  instructions_struct.askama  project.askama  types_struct.askama
crates/core/: Cargo.toml
crates/core/src/: account.rs  account_deletion.rs  block_details.rs  collection.rs  datasource.rs  deserialize.rs  error.rs  instruction.rs  lib.rs  metrics.rs  pipeline.rs  processor.rs  schema.rs  transaction.rs  transformers.rs
crates/gql-server/: Cargo.toml
crates/gql-server/src/: lib.rs  server.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs  schemas.rs  try_decode_ixs.rs
crates/postgres-client/: Cargo.toml
crates/proc-macros/: Cargo.toml
crates/proc-macros/src/: lib.rs
crates/test-utils/: Cargo.toml
datasource/grpc-highway-gateway/: Cargo.toml
datasource/grpc-highway-gateway/src/: lib.rs
datasource/rpc-block-crawler/: Cargo.toml
datasource/rpc-block-crawler/src/: lib.rs
datasource/rpc-program-subscribe/: Cargo.toml
datasource/rpc-program-subscribe/src/: lib.rs
datasource/rpc-transaction-crawler/: Cargo.toml
datasource/rpc-transaction-crawler/src/: lib.rs
datasource/solana-grpc/: Cargo.toml
datasource/solana-grpc/src/: lib.rs
decoder/address-lookup-table/: Cargo.toml
decoder/address-lookup-table/src/accounts/: mod.rs
decoder/address-lookup-table/src/instructions/: close_lookup_table.rs  create_lookup_table.rs  deactivate_lookup_table.rs  extend_lookup_table.rs  freeze_lookup_table.rs  mod.rs
decoder/address-lookup-table/src/types/: lookup_table_addresses.rs  lookup_table_meta.rs
decoder/kamino-lending/: Cargo.toml
decoder/kamino-lending/src/accounts/: lending_market.rs  mod.rs  obligation.rs  referrer_state.rs  referrer_token_state.rs  reserve.rs  short_url.rs  user_metadata.rs  user_state.rs
decoder/kamino-lending/src/instructions/: borrow_obligation_liquidity.rs  delete_referrer_state_and_short_url.rs  deposit_obligation_collateral.rs  deposit_reserve_liquidity.rs  deposit_reserve_liquidity_and_obligation_collateral.rs  flash_borrow_reserve_liquidity.rs  flash_repay_reserve_liquidity.rs  idl_missing_types.rs  init_farms_for_reserve.rs  init_lending_market.rs  init_obligation.rs  init_obligation_farms_for_reserve.rs  init_referrer_state_and_short_url.rs  init_referrer_token_state.rs  init_reserve.rs  init_user_metadata.rs  liquidate_obligation_and_redeem_reserve_collateral.rs  mark_obligation_for_deleveraging.rs  mod.rs  redeem_fees.rs  redeem_reserve_collateral.rs  refresh_obligation.rs  refresh_obligation_farms_for_reserve.rs  refresh_reserve.rs  refresh_reserves_batch.rs  repay_and_withdraw_and_redeem.rs  repay_obligation_liquidity.rs  request_elevation_group.rs  socialize_loss.rs  update_lending_market.rs  update_lending_market_owner.rs  update_reserve_config.rs  withdraw_obligation_collateral.rs  withdraw_obligation_collateral_and_redeem_reserve_collateral.rs  withdraw_protocol_fee.rs  withdraw_referrer_fees.rs
decoder/kamino-lending/src/types/: asset_tier.rs  curve_point.rs  elevation_group.rs  fee_calculation.rs  init_obligation_args.rs  last_update.rs  obligation_collateral.rs  obligation_liquidity.rs  price_heuristic.rs  pyth_configuration.rs  reserve_config.rs  reserve_farm_kind.rs  reserve_fees.rs  reserve_liquidity.rs  reserve_status.rs  scope_configuration.rs  switchboard_configuration.rs  token_info.rs  update_config_mode.rs  update_lending_market_config_value.rs  update_lending_market_mode.rs  withdrawal_caps.rs
decoder/kamino-vault/: Cargo.toml
decoder/kamino-vault/src/accounts/: mod.rs  reserve.rs  vault_state.rs
decoder/kamino-vault/src/instructions/: deposit.rs  give_up_pending_fees.rs  init_vault.rs  initialize_shares_metadata.rs  invest.rs  mod.rs  update_admin.rs  update_reserve_allocation.rs  update_shares_metadata.rs  update_vault_config.rs  withdraw.rs  withdraw_from_available.rs  withdraw_pending_fees.rs
decoder/kamino-vault/src/types/: big_fraction_bytes.rs  borrow_rate_curve.rs  curve_point.rs  last_update.rs  price_heuristic.rs  pyth_configuration.rs  reserve_collateral.rs  reserve_config.rs  reserve_fees.rs  reserve_liquidity.rs  scope_configuration.rs  switchboard_configuration.rs  token_info.rs  vault_allocation.rs  vault_config_field.rs
decoder/marginfi-v2/: Cargo.toml
decoder/marginfi-v2/src/accounts/: bank.rs  marginfi_account.rs  marginfi_group.rs  mod.rs
decoder/marginfi-v2/src/instructions/: lending_account_borrow.rs  lending_account_borrow_event.rs  lending_account_close_balance.rs  lending_account_deposit.rs  lending_account_deposit_event.rs  lending_account_end_flashloan.rs  lending_account_liquidate.rs  lending_account_liquidate_event.rs  lending_account_repay.rs  lending_account_repay_event.rs  lending_account_settle_emissions.rs  lending_account_start_flashloan.rs  lending_account_withdraw.rs  lending_account_withdraw_emissions.rs  lending_account_withdraw_event.rs  lending_pool_accrue_bank_interest.rs  lending_pool_add_bank.rs  lending_pool_add_bank_with_seed.rs  lending_pool_bank_accrue_interest_event.rs  lending_pool_bank_collect_fees_event.rs  lending_pool_bank_configure_event.rs  lending_pool_bank_create_event.rs  lending_pool_bank_handle_bankruptcy_event.rs  lending_pool_collect_bank_fees.rs  lending_pool_configure_bank.rs  lending_pool_handle_bankruptcy.rs  lending_pool_setup_emissions.rs  lending_pool_update_emissions_parameters.rs  marginfi_account_create_event.rs  (+10 more)
decoder/meteora-dlmm/: Cargo.toml
decoder/okx-dex/: Cargo.toml
decoder/openbook-v2/: Cargo.toml
decoder/phoenix-v1/: Cargo.toml
decoder/raydium-amm-v4/: Cargo.toml
decoder/raydium-cpmm/: Cargo.toml
decoder/sharky/: Cargo.toml
decoder/system-program/: Cargo.toml
decoder/token-2022/: Cargo.toml
decoder/token-program/: Cargo.toml
metrics/log/: Cargo.toml
metrics/log/src/: lib.rs
metrics/prometheus/: Cargo.toml
metrics/prometheus/src/: lib.rs
(+2556 files in other folders)
