[package]
name = "solana-indexer-core"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[features]
default = ["macros"]
macros = ["solana-indexer-macros", "solana-indexer-proc-macros"]

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

async-trait = { workspace = true }
borsh = { version = "0.10.3" }
bs58 = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# Optional macro dependencies
solana-indexer-macros = { workspace = true, optional = true }
solana-indexer-proc-macros = { workspace = true, optional = true }

[lib]
crate-type = ["rlib"]
