[package]
name = "solana-indexer-postgres-client"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
juniper = { workspace = true }
sqlx = { workspace = true }
sqlx_migrator = { workspace = true }

[lib]
crate-type = ["rlib"]