[package]
name = "solana-indexer-proc-macros"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies]
borsh-derive-internal = { workspace = true }
hex = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
serde = { workspace = true }
syn = { workspace = true, features = ["full"] }