[package]
name = "solana-indexer-datasource-grpc-highway-gateway"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }

solana-indexer-core = { workspace = true }

async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
solana-grpc-client = { workspace = true }
solana-grpc-proto = { workspace = true }
