[package]
name = "solana-indexer-datasource-rpc-block-crawler"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
solana-client = { workspace = true }
solana-commitment-config = { workspace = true }
solana-hash = { workspace = true }
solana-transaction-status = { workspace = true }

solana-indexer-core = { workspace = true }

async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
