[package]
name = "solana-indexer-datasource-rpc-program-subscribe"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-client = { workspace = true }
solana-sdk = { workspace = true }

solana-indexer-core = { workspace = true }

async-trait = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
