[package]
name = "solana-indexer-datasource-rpc-program-subscribe"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-account = { workspace = true }
solana-client = { workspace = true }
solana-pubkey = { workspace = true }

solana-indexer-core = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }