[package]
name="solana-indexer-decoding-openbook-v2"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
solana-indexer-core = { workspace = true }
serde = { workspace = true }
serde-big-array = { workspace = true }
solana-sdk = { workspace = true }
