[package]
name="solana-indexer-decoding-raydium-cpmm"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
solana-indexer-core = { workspace = true }
solana-indexer-macros = { workspace = true }
solana-indexer-proc-macros = { workspace = true }

solana-sdk = { workspace = true }

serde = { workspace = true }
