[package]
name = "solana-indexer-decoding-sharky"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
solana-indexer-core = { workspace = true }
serde = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
