[package]
name = "solana-indexer-decoding-system-program"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
solana-indexer-core = { workspace = true }
serde = { workspace = true }
solana-account = { workspace = true }
solana-instruction = { workspace = true, default-features = false }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }

[dev-dependencies]
solana-indexer-test-utils = { workspace = true }
